@startuml

title __WHEEL_OF_FORTUNE's Class Diagram__\n

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        class academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune {
            {static} - MAX_NUM_OF_PLAYERS : int
            - gameQuotes : List<String>
            - isGameEnded : boolean
            - isGameStarted : boolean
            - listOfPlayers : List<PlayerHandler>
            - playerLetters : Set<String>
            - quoteToGuess : String
            - service : ExecutorService
            + WheelOfFortune()
            + acceptPlayer()
            + addPlayerLetters()
            + addPlayerToList()
            + areStillPlayersPlaying()
            + broadcast()
            + broadcast()
            + drawBoard()
            + endGame()
            + getListOfChosenLetters()
            + getPlayersCash()
            + getQuoteToGuess()
            + isAcceptingPlayers()
            + run()
            + startGame()
            - addQuoteToList()
            - checkIfGameCanStart()
            - doTurn()
            - generateRandomQuote()
            - prepareQuoteToGame()
        }
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      namespace wheel_of_fortune {
        class academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune.PlayerHandler {
            ~ in : BufferedReader
            - hasLeft : boolean
            - message : String
            - name : String
            - out : PrintWriter
            - playerCash : int
            - playerSocket : Socket
            + PlayerHandler()
            + addCash()
            + getAnswer()
            + getName()
            + getPlayerCash()
            + hasLeft()
            + quit()
            + removeCash()
            + run()
            + send()
        }
      }
    }
  }
  

  academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune -up-|> academy.mindswap.games_factory.Game
  academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune o-- academy.mindswap.games_factory.wheel_of_fortune.wheel.Wheel : wheel
  academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune +-down- academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune.PlayerHandler
  academy.mindswap.games_factory.wheel_of_fortune.WheelOfFortune.PlayerHandler .up.|> java.lang.Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
